2006-08-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-event-classes.scm (unlistened-music-event-classes): idem.

	* scm/define-music-types.scm (music-descriptions): consistency:
	Use solo-{one,two}-event iso. solo-[12]-event.

	* lily/part-combine-engraver.cc (process_music):
	Use solo-{one,two}-event iso. solo-[12]-event.

	* ly/declarations-init.ly (partCombineListener): add Timing as
	alias

	* flower/std-string.cc (string_copy): use copy ()

	* lily/source-file.cc (Source_file): use copy(). Remove contents_str0()

2006-08-24  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/changing-defaults.itely, global.itely,
	lilypond-book.itely, page.itely: minor changes from mailist.

2006-08-23  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/mutopia-index.py (allfiles):  filter  lily-XXX and
	snippet-map

	* scm/define-context-properties.scm
	(translator-property-description): robustness: detect type errors
	in property definitions.

	* lily/parser.yy (score_body): protect SCORE_IDENTIFIER result
	after getting it from SCM. 

	* lily/smobs.cc (protect_smob): switch off fancy smob protection
	for now. 

	* lily/include/performer.hh (class Performer): strip get_tempo() method.

	* lily/midi-def.cc: strip file.

	* lily/lexer.ll (Lily_lexer): don't protect hash key separately.

	* lily/include/context-def.hh (struct Context_def): use
	VIRTUAL_COPY_CONSTRUCTOR().

	* lily/source-file.cc: smobification.

	* lily/include/source-file.hh (class Source_file): smobify
	Source_file. Trim redundant members.

	* lily/parser.yy (Lily_lexer::try_special_identifiers): unprotect
	clones after creation. This plugs a huge memory leak.

	* python/convertrules.py (FatalConversionError.sub_tempo):
	complete rule for \midi{ \tempo }

	* input/mutopia/J.S.Bach/wtk1-fugue2.ly (bassdux): idem.

	* input/mutopia/F.Schubert/morgenlied.ly (pianoLH): update tempo.

2006-08-23  Joe Neeman  <joeneeman@gmail.com>
