@@ -52,6 +52,7 @@ BUG HUNTERS/SUGGESTIONS
 Albert Frantz
 Anthony Youngman
 Aurèle Duda
+Ben Hoefer
 Bernie Arai
 Cameron Horsburgh
 Charles Cave
@@ -89,6 +90,7 @@ Trent Johnston
 Trevor Bača
 Vaclav Smilauer
 Werner Lemberg
+Will Oram
 Zoltan V. Laszlo
 
 Release 2.8
