@@ -1,5 +1,7 @@
 2006-08-24  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* scm/define-markup-commands.scm (char): use ly:wide-char->utf-8
+
 	* scm/define-event-classes.scm (unlistened-music-event-classes): idem.
 
 	* scm/define-music-types.scm (music-descriptions): consistency:
